Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">SPTestrailReporter</h1>
-      <h2 class="project-tagline">iOS Library that automagically perform TestRail Reporting</h2>
+      <h2 class="project-tagline">iOS Library that automagically performs TestRail Reporting</h2>
       <a href="https://github.com/SiddarthaPolisetty/SPTestRailReporter" class="btn">View on GitHub</a>
       <a href="https://github.com/SiddarthaPolisetty/SPTestRailReporter/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/SiddarthaPolisetty/SPTestRailReporter/tarball/master" class="btn">Download .tar.gz</a>
@@ -22,7 +22,7 @@
       <h3>
 <a id="welcome-to-sptestrailreporter" class="anchor" href="#welcome-to-sptestrailreporter" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to SPTestRailReporter.</h3>
 
-<p>add Introduction</p>
+<p>iOS Library that automagically performs TestRail Reporting.</p>
 
 <h3>
 <a id="using-sptestrailreporter" class="anchor" href="#using-sptestrailreporter" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Using SPTestRailReporter</h3>
