Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <a id="sptestrailreporter" class="anchor" href="#sptestrailreporter" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>SPTestRailReporter</strong>
 </h1>
 
-<p><strong>SPTestRailReporter</strong> is the missing iOS Framework that automagically performs TestRail Reporting.</p>
+<p><strong>SPTestRailReporter</strong> is the missing iOS Framework that automagically performs <a href="http://www.gurock.com/testrail/">TestRail</a> Reporting.</p>
 
 <h2>
 <a id="what-is-testrail" class="anchor" href="#what-is-testrail" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What is TestRail</h2>
