--- a/index.html
+++ b/index.html
@@ -50,7 +50,32 @@
 <h2>
 <a id="using-sptestrailreporter" class="anchor" href="#using-sptestrailreporter" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Using SPTestRailReporter</h2>
 
-<p><strong>SPTestRailReporter</strong> performs almost all CRUD operations on all entities supported by TestRail api v2. The following methods provide an overview of SPTestRailReporter's interface.</p>
+<p><strong>SPTestRailReporter</strong> performs almost all CRUD operations on all entities supported by TestRail api v2. The following documentation helps you onboard SPTestRailReporter.</p>
+
+<ul>
+<li>Headers Required</li>
+</ul>
+
+<div class="highlight highlight-source-objc"><pre>#<span class="pl-k">import</span> <span class="pl-s"><span class="pl-pds">"</span>SPTestRailReporter.h<span class="pl-pds">"</span></span>
+#<span class="pl-k">import</span> <span class="pl-s"><span class="pl-pds">"</span>SPTestRailConfigurationBuilder.h<span class="pl-pds">"</span></span></pre></div>
+
+<ul>
+<li>Configure to Point to your TestRail instance, provide credentials for accessing the api's.</li>
+</ul>
+
+<div class="highlight highlight-source-objc"><pre>[SPTestRailConfigurationBuilder <span class="pl-c1">sharedConfigurationBuilder</span>].testRailBaseURL = [<span class="pl-c1">NSURL</span> <span class="pl-c1">URLWithString:</span><span class="pl-s"><span class="pl-pds">@"</span>&lt;yourtestrailurl&gt;<span class="pl-pds">"</span></span>];
+[SPTestRailConfigurationBuilder <span class="pl-c1">sharedConfigurationBuilder</span>].userName = <span class="pl-s"><span class="pl-pds">@"</span>&lt;yourtestrailemail&gt;<span class="pl-pds">"</span></span>;
+[SPTestRailConfigurationBuilder <span class="pl-c1">sharedConfigurationBuilder</span>].password = <span class="pl-s"><span class="pl-pds">@"</span>&lt;yourtestrailpassword&gt;<span class="pl-pds">"</span></span>;</pre></div>
+
+<ul>
+<li>Initialize SPTestRailReporter</li>
+</ul>
+
+<div class="highlight highlight-source-objc"><pre>[SPTestRailReporter <span class="pl-c1">sharedReporter</span>]</pre></div>
+
+<ul>
+<li>Now, that you have SPTestRailProvider's singleton instance, you are all set to play with the following API interfaces.</li>
+</ul>
 
 <div class="highlight highlight-source-objc"><pre><span class="pl-c">//Result CRUD</span>
 - (<span class="pl-c1">NSArray</span> *)getAllResultsforTestId:(<span class="pl-c1">NSNumber</span> *)testId Error:(<span class="pl-c1">NSError</span> *__autoreleasing *)error;
@@ -133,6 +158,11 @@
 - (<span class="pl-k">BOOL</span>)deleteProjectWithId:(<span class="pl-c1">NSNumber</span> *)projectId Error:(<span class="pl-c1">NSError</span> *__autoreleasing *)error;
 - (<span class="pl-c1">NSArray</span> *)getAllProjectsError:(<span class="pl-c1">NSError</span> *__autoreleasing *)error;
 - (SPTestRailProject *)getProjectWithId:(<span class="pl-c1">NSNumber</span> *)projectId Error:(<span class="pl-c1">NSError</span> *__autoreleasing *)error;</pre></div>
+
+<h2>
+<a id="testrail-api-reference" class="anchor" href="#testrail-api-reference" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>TestRail API Reference</h2>
+
+<p>More Information on model schema, usage information and common error codes can be found here <a href="http://docs.gurock.com/testrail-api2/start">API V2</a> </p>
 
 <h2>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h2>
