--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     </section>
 
     <section class="main-content">
-      <p><a href="https://travis-ci.com/SiddarthaPolisetty/SPTestRailReporter"><img src="https://travis-ci.com/SiddarthaPolisetty/SPTestRailReporter.svg?token=gvbx8gBcsPpfM9guFszy&amp;branch=master" alt="Build Status"></a></p>
+      <p><a href="https://travis-ci.com/SiddarthaPolisetty/SPTestRailReporter"><img src="https://travis-ci.com/SiddarthaPolisetty/SPTestRailReporter.svg?token=gvbx8gBcsPpfM9guFszy&amp;branch=master" alt="Build Status"></a>
+<a href="http://cocoapods.org/pods/SPTestRailReporter"><img src="http://img.shields.io/cocoapods/v/SPTestRailReporter.svg?style=flat" alt="Version"></a> 
+<a href="http://cocoapods.org/pods/SPTestRailReporter"><img src="http://img.shields.io/cocoapods/p/SPTestRailReporter.svg?style=flat" alt="Platform"></a>
+<a href="LICENSE"><img src="http://img.shields.io/cocoapods/l/SPTestRailReporter.svg?style=flat" alt="License"></a></p>
 
 <h1>
 <a id="sptestrailreporter" class="anchor" href="#sptestrailreporter" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>SPTestRailReporter</strong>
@@ -40,11 +43,11 @@
 </ul>
 
 <h2>
-<a id="how-to-integrate-sptestrailreporter-into-your-project" class="anchor" href="#how-to-integrate-sptestrailreporter-into-your-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to integrate SPTestRailReporter into your project</h2>
+<a id="how-to-use-sptestrailreporter-in-your-project" class="anchor" href="#how-to-use-sptestrailreporter-in-your-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to use SPTestRailReporter in your project</h2>
 
 <ul>
-<li>At present we have this <a href="https://github.com/SiddarthaPolisetty/SPTestRailReporter">SPTestRailReporter</a> Repository. You can download and start building cool stuff.</li>
-<li>We are busy building more features and eventually create a pod to easily plug and play :)</li>
+<li>Simply add <code>pod 'SPTestRailReporter', '1.0.0'</code> as a dependency in your project.</li>
+<li>You can also fork/download and start building cool stuff with <a href="https://github.com/SiddarthaPolisetty/SPTestRailReporter">SPTestRailReporter Repository</a>. </li>
 </ul>
 
 <h2>
@@ -56,8 +59,7 @@
 <li>
 <p>Headers Required</p>
 
-<div class="highlight highlight-source-objc"><pre>#<span class="pl-k">import</span> <span class="pl-s"><span class="pl-pds">"</span>SPTestRailReporter.h<span class="pl-pds">"</span></span>
-#<span class="pl-k">import</span> <span class="pl-s"><span class="pl-pds">"</span>SPTestRailConfigurationBuilder.h<span class="pl-pds">"</span></span></pre></div>
+<div class="highlight highlight-source-objc"><pre>#<span class="pl-k">import</span> <span class="pl-s"><span class="pl-pds">&lt;</span>SPTestRailReporter/SPTestRailReporter.h<span class="pl-pds">&gt;</span></span></pre></div>
 </li>
 <li>
 <p>Configure to Point to your TestRail instance, provide credentials for accessing the api's.</p>
@@ -183,9 +185,9 @@
 <p>More Information on model schema, usage information and common error codes can be found here <a href="http://docs.gurock.com/testrail-api2/start">API V2</a> </p>
 
 <h2>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h2>
+<a id="author-and-contributor" class="anchor" href="#author-and-contributor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Author and Contributor</h2>
 
-<p>Created with love by <a href="https://github.com/SiddarthaPolisetty" class="user-mention">@SiddarthaPolisetty</a>. </p>
+<p>Created with love by <a href="https://www.linkedin.com/in/siddarthapolisetty">SiddarthaPolisetty</a>. </p>
 
 <h2>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h2>
