Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p><a href="https://travis-ci.com/SiddarthaPolisetty/SPTestRailReporter"><img src="https://travis-ci.com/SiddarthaPolisetty/SPTestRailReporter.svg?token=gvbx8gBcsPpfM9guFszy&amp;branch=master" alt="Build Status"></a>
 <a href="http://cocoapods.org/pods/SPTestRailReporter"><img src="http://img.shields.io/cocoapods/v/SPTestRailReporter.svg?style=flat" alt="Version"></a> 
 <a href="http://cocoapods.org/pods/SPTestRailReporter"><img src="http://img.shields.io/cocoapods/p/SPTestRailReporter.svg?style=flat" alt="Platform"></a>
-<a href="LICENSE"><img src="http://img.shields.io/cocoapods/l/SPTestRailReporter.svg?style=flat" alt="License"></a></p>
+<a href="https://github.com/SiddarthaPolisetty/SPTestRailReporter/blob/master/LICENSE"><img src="http://img.shields.io/cocoapods/l/SPTestRailReporter.svg?style=flat" alt="License"></a></p>
 
 <h1>
 <a id="sptestrailreporter" class="anchor" href="#sptestrailreporter" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>SPTestRailReporter</strong>
